# sxd-xpath

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  xpath-grammar.txt
.github/workflows/: ci.yml
evaluate/: .gitignore  Cargo.toml
evaluate/src/: main.rs
src/: axis.rs  context.rs  expression.rs  function.rs  lib.rs  macros.rs  node_test.rs  nodeset.rs  parser.rs  token.rs  tokenizer.rs  visitor.rs
tests/: expression.rs  integration.rs  node-test.rs  parser.rs  tokenizer.rs
