[package]
name = "sxd-xpath"
version = "0.2.1"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]

description = "A Rust XML XPath library"
readme = "README.md"
keywords = ["xml", "xpath"]

homepage = "https://github.com/shepmaster/sxd-xpath"
repository = "https://github.com/shepmaster/sxd-xpath"
documentation = "https://shepmaster.github.io/sxd-xpath/"

license = "MIT"

[features]
unstable = []

[dependencies]
getopts = "0.2.4"
peresil = "0.3.0"
sxd-document = "0.2.0"
quick-error = "1.1.0"
