[package]
name = "sxd-xpath"
version = "0.4.2"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"

description = "A Rust XML XPath library"
readme = "README.md"
keywords = ["xml", "xpath"]

repository = "https://github.com/shepmaster/sxd-xpath"
documentation = "https://docs.rs/sxd-xpath/"

license = "MIT/Apache-2.0"

[features]
# Unused -- remove on next semver-imcompatible release
unstable = []

[dependencies]
peresil = "0.3.0"
sxd-document = ">= 0.2, < 0.4"
snafu = "0.5.0"
